--- a/dsan-website/5000-website/_quarto.yml
+++ b/dsan-website/5000-website/_quarto.yml
@@ -36,7 +36,7 @@ website:
         menu:
           - href: info/classification.qmd
             text: Classification
-          - href: info/regression.qmd
+          - href: codes/decisiontree_r.ipynb
             text: Regression
       - href: info/conclusion.qmd
         text: Conclusion
