changes have been made

--- a/dsan-website/5000-website/_quarto.yml
+++ b/dsan-website/5000-website/_quarto.yml
@@ -34,7 +34,7 @@ website:
       - href: ""
         text: Decision Trees
         menu:
-          - href: info/classification.qmd
+          - href: codes/decisiontree_c.ipynb
             text: Classification
           - href: codes/decisiontree_r.ipynb
             text: Regression
